--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "mock": "DEBUG=koa*,mock:* APP_ENV=mock nodemon mock-server/index.js --exec babel-node --presets=@babel/preset-env"
+    "mock": "DEBUG=koa*,mock:* APP_ENV=mock nodemon server/index.js --exec babel-node --presets=@babel/preset-env",
+    "start:dev": "yarn mock & yarn start"
   },
   "eslintConfig": {
     "extends": "react-app"
